# easy-msi

./: LICENSE  README.md  app.py  app_utils.py  main.js  package.json  preload.js  pyproject.toml  requirements.txt
public/: index.html  manifest.json
scripts/: package.js  start.js
src/: index.js  index.scss
src/components/: App.js
src/components/Interface/: Projects.js  Workspace.js
src/components/Stages/: Analyze.js  Process.js  Resize.js  Target.js
src/components/Titlebar/: Titlebar.js  TitlebarButtons.js
src/contexts/: CanvasContext.js  FilesContext.js  ImageContext.js  ProjectContext.js
src/easy_msi/: __init__.py  __main__.py  constants.py  files.py  interface.py  models.py  project.py  settings.py
src/easy_msi/saved/: settings.pickle
src/scss/: App.scss  Projects.scss  Titlebar.scss  TitlebarButtons.scss  Workspace.scss
src/utils/: constants.js  requests.js  utils.js
